# unitypilot

./: .gitignore  .mcp.json  ACCEPTANCE_TESTS.md  README.md  TODO.md  mcp.example.json  pyproject.toml  run_unitypilot_mcp.py
.cursor/: mcp.json
UnityPilot/: .gitignore
UnityPilot/ProjectSettings/: ProjectSettings.asset
deploy/: build_release.py
docs/: 00-UnityPilot-MCP-总览与模块索引.md  01-WS协议定义.md  02-MCP工具接口定义.md  DISTRIBUTION.md  M25-远程运行时调试模块-需求文档.md  UnityPilot_MCP开发部署文档.md
scripts/: run_acceptance_suite.py
src/unitypilot_mcp/: auto_fix_loop.py  dispatcher.py  main.py  mcp_main.py  mcp_stdio_server.py  server.py  session_manager.py  state_store.py  tool_facade.py
unitypilot-editor/: README.md  package.json
unitypilot-editor/Editor/: UnityPilot.Editor.asmdef  UnityPilot.asmdef  UnityPilotAssetService.cs  UnityPilotBatchService.cs  UnityPilotBootstrap.cs  UnityPilotBridge.cs  UnityPilotBuildService.cs  UnityPilotCSharpService.cs  UnityPilotCommandRouter.cs  UnityPilotCompileService.cs  UnityPilotComponentService.cs  UnityPilotConsoleService.cs  UnityPilotDragDropService.cs  UnityPilotEditorLog.cs  UnityPilotEditorService.cs  UnityPilotGameObjectService.cs  UnityPilotKeyboardService.cs  UnityPilotLogsTabDiagnostics.cs  UnityPilotMaterialService.cs  UnityPilotMenuService.cs  UnityPilotOperationTracker.cs  UnityPilotPackageService.cs  UnityPilotPlayInputService.cs  UnityPilotPrefabService.cs  UnityPilotProtocol.cs  UnityPilotReflectionService.cs  UnityPilotResourceService.cs  UnityPilotSceneService.cs  UnityPilotScreenshotService.cs  UnityPilotScriptService.cs  (+8 more)
(+22 files in other folders)
